[package]
name = "tensor-trade-stream"
version = "0.5.6"
edition = "2021"
authors = ["mektigboy <mektigboy@protonmail.com>"]
description = "A client for receiving updates from Tensor Trade Marketplace over WebSocket using GraphQL subscriptions."
repository = "https://github.com/protecc-labs/tensor-tensor-stream-rs"
license = "MIT"
categories = ["api-bindings"]
keywords = ["crypto", "api"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.35.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
graphql_client = { version = "0.13.0", default-features = false, features = [
    "graphql_query_derive",
] }
graphql-ws-client = { version = "0.7.0", features = [
    "client-graphql-client",
    "cynic",
] }
async-tungstenite = { version = "0.24.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
eyre = "0.6.11"
